projects/compiler/test/typechecker/binary/coalesce_eq_error.2.out
Error at %FILE_NAME%:3:7
Type mismatch
  |  a ?:= b
           ^
Expected: Int
but instead found: Int?
