projects/compiler/test/typechecker/binary/coalesce_eq_error.2.abra
var a: Int? = 12
val b: Int? = None
a ?:= b